Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48236

WinRT fails to deploy packages

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.5.1
    • 5.5.1
    • Build System
    • None
    • Windows 10, VS 2013 express, Windows Phone 8.1
    • 02402887562f55b822fd29a64437da3d1252fd5b

      I have been testing the latest build of Qt 5.5.1 for winphone_arm, trying to deploy my project to a WP 8.1 device. The package used was this one:
      http://download.qt.io/snapshots/qt/5.5/5.5.1/147/

      I get the following error:
      "error APPX1101: Payload contains two or more files with the same destination path 'Qt5Core.dll'. Source files: "

      This is reproducible every time, even for a clean project and after a complete re-build. Re-generating the same project using 5.5.0 (commercial) does work as expected so this is a regression.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            bachewii Jens
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes